integration_tests/codegen_fail/fail/object/attr_fields_duplicate.rs
use juniper::graphql_object;

struct ObjA;

#[graphql_object]
impl ObjA {
    fn id(&self) -> &str {
        "funA"
    }

    #[graphql(name = "id")]
    fn id2(&self) -> &str {
        "funB"
    }
}

fn main() {}
